--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://key-semantics-beige.vercel.app/" />
+    <meta property="og:url" content="https://jugendapp-reinach-draft.vercel.app/" />
     <meta property="og:title" content="Jugendapp Reinach Draft" />
     <meta property="og:description" content="Event einsenden" />
     <meta property="og:image" content="/meta-tag.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://key-semantics-beige.vercel.app/" />
+    <meta property="twitter:url" content="https://jugendapp-reinach-draft.vercel.app/" />
     <meta property="twitter:title" content="Jugendapp Reinach Draft" />
     <meta property="twitter:description" content="Event einsenden" />
     <meta property="twitter:image" content="/meta-tag.png" />
